added user authentication

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <h1>gaile's ideas... Yeah!</h1>
-<p>Let's get started.
+<p class: hdg>Let's get started.
 <br>
 <%= link_to "See my ideas!", ideas_path %>
 </p>
