--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
  }
 
  footer{
- 	margin-top: 100px;
+ 	margin-top: 100px; 
  }
 
  table, td, th {
@@ -33,4 +33,8 @@ img {
 }
 .hdgPic {
 	width: 50px; height: 50px;
+}
+
+hdg{
+	font-weight: bolder; font-family: 
 }
