--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,13 @@
   </div>
 </nav>
 
+<% if current_user %>
+  <h1> <%= current_user.name %> </h1>
+  <%= link_to "Log Out", logout_path %>
+<% else %>
+  <%= link_to "Log In", login_path %>
+<% end %>
+
 <div class="container">
 	<%= yield %>
 </div>
